syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.control_client";

package control_client;

service ScsControl {
  rpc CreateCache (CreateCacheRequest) returns (CreateCacheResponse) {}
  rpc DeleteCache (DeleteCacheRequest) returns (DeleteCacheResponse) {}
  rpc ListCaches (ListCachesRequest) returns (ListCachesResponse) {}
  rpc CreateSigningKey (CreateSigningKeyRequest) returns (CreateSigningKeyResponse) {}
  rpc RevokeSigningKey (RevokeSigningKeyRequest) returns (RevokeSigningKeyResponse) {}
  rpc ListSigningKeys (ListSigningKeysRequest) returns (ListSigningKeysResponse) {}
}

message DeleteCacheRequest {
  string cache_name = 1;
}

message DeleteCacheResponse {
}

message CreateCacheRequest {
  string cache_name = 1;
}

message CreateCacheResponse {
}

message ListCachesRequest {
  string next_token = 1;
}

message Cache {
  string cache_name = 1;
}

message ListCachesResponse {
  repeated Cache cache = 1;
  string next_token = 2;
}

message CreateSigningKeyRequest {
  uint32 ttl_minutes = 1;
}
message CreateSigningKeyResponse {
  string key = 1;
  uint64 expires_at = 2;
}
message RevokeSigningKeyRequest {
  string key_id = 1;
}
message RevokeSigningKeyResponse {
}
message SigningKey {
  // The id of the signing key
  string key_id = 1;
  // Epoch time in seconds when the signing key expires
  uint64 expires_at = 2;
}
message ListSigningKeysRequest {
  string next_token = 1;
}
message ListSigningKeysResponse {
  repeated SigningKey signing_key = 1;
  string next_token = 2;
}
